[package]
name = "ahci_driver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = "0.1.1"
libc = "0.2.174"

[features]
default = []

[profile.dev]
panic = "abort"
relocation-model = "pic"

[profile.release]
panic = "abort"
relocation-model = "pic"

# RUSTFLAGS="-C target-feature=-ual,-lsx,-lasx,-lvz" cargo build --target=loongarch64-unknown-linux-musl --release
